--- a/style.css
+++ b/style.css
@@ -269,9 +269,9 @@ button a{
         padding-left: 0px;
     }
     .trophy h4{
-        margin-top: px;
+        margin-top: 0px;
         padding-left: 0px;
-        margin-bottom: 20px;
+        margin-bottom: 40px;
     }
  }
 
