--- a/style.css
+++ b/style.css
@@ -241,6 +241,9 @@ button a{
         grid-template-columns: repeat(1, 1fr);
         justify-content: center;
     }
+    .player{
+        margin: auto;
+    }
     .highlight-image img{
         width: 100%;
         height: auto;
