--- a/style.css
+++ b/style.css
@@ -20,18 +20,36 @@ body{
  }
  button{
     background: #E02C6D;
-    border: none;
+    border: 1px solid #E02C6D;
     margin-bottom: 15px;
-   margin-top: 20px;
-   padding: 10px 24px;
+    margin-top: 20px;
+    padding: 10px 20px;
+    transition: .2s;
  }
+ button:hover{
+     background: #fff;
+     border: 1px solid #E02C6D;
+ }
+ button:hover a{
+     color: #E02C6D;
+ }
+ button:hover i{
+     margin-left: 15px;
+ }
+ /* button:hover i{
+     margin-left: 10px;
+ } */
  button i{
     margin-left: 5px;
     font-size: 10px;
+    transition: .2s;
 }
 button a{
     text-decoration: none;
     color: #fff;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 1px;
 }
  i{
      font-size: 40px;
