--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ button a{
  }
  .player{
     width: 300px;
-    height: 410px;
+    height: 430px;
     padding: 15px;
     box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
  }
@@ -102,7 +102,14 @@ button a{
     width: 300px;
     height: 256px;
  }
-
+ .player h3{
+     font-size: 28px;
+     margin-top: 16px;
+ }
+ .player p{
+     margin-top: 10px;
+     font-size: 16px;
+ }
   /*---------------------
  player section  style
  -----------------------  */
@@ -115,6 +122,11 @@ button a{
  }
 .highlight-text h1{
     font-size: 48px;
+}
+.highlight-text p{
+    margin-right: 40px;
+    font-size: 16px;
+    margin-top: 20px;
 }
  .highlight-image img{
     width: 567px;
@@ -145,6 +157,9 @@ button a{
     color: #fff;
     padding: 5px 40px;
     border-radius: 30px;
+}
+.match-title h2{
+    font-size: 48px;
 }
  .match img{
      width: 150px;
@@ -247,6 +262,7 @@ button a{
     }
 
     .hero-text h1{
+        font-size: 34px;
         padding: 0px;
     }
     .hero-image img{
@@ -262,9 +278,20 @@ button a{
     .player{
         margin: auto;
     }
+    .highlight-section{
+        margin: auto;
+    }
     .highlight-image img{
         width: 100%;
         height: auto;
+    }
+    .highlight-text h1{
+        font-size: 30px;
+        margin-top: 60px;
+    }
+    .match-title h2{
+        font-size: 30px;
+        margin-top: 60px;
     }
     .footer-section{
         width: 100%;
