--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ button a{
      font-size: 16px;
  }
   /*---------------------
- player section  style
+ Highlight section  style
  -----------------------  */
  .highlight-section{
      display: flex;
@@ -208,7 +208,10 @@ button a{
     margin-top: 5px;
     padding-left: 60px;
 }
-
+.boot{
+    width: 00px;
+    height: 180px;
+}
 
 /* .trophy h4:hover{
     transform: translateY(-10px);
